--- a/pypi_org/templates/home/index.html
+++ b/pypi_org/templates/home/index.html
@@ -1,6 +1,39 @@
 {% extends 'shared/_layout.html' %}
 {% block main_content %}
-    <h1>Python Package Index</h1>
+    <div class="hero">
+        <h1>Find, install and publish Python packages with the Python Package Index</h1>
 
-    <h2>Packages</h2>
+        <input type="text" placeholder=" Search projects" class="form-control">
+
+        or <a href="">Browse projects</a>
+    </div>
+
+    <div class="pypi-stats">
+        <div class="stat">-1 projects</div>
+        <div class="stat">-1 release</div>
+        <div class="stat">-1 users</div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <h2>New releases</h2>
+
+                <div>Hot off the press: the newest project releases</div>
+
+                {% for p in packages %}
+                <div class="project">
+                    <div class="title">
+                        <a href="">{{ p.name }} {{ p.version }}</a>
+                        <div class="desc">THE DESC</div>
+                    </div>
+                </div>
+                {% endfor %}
+
+            </div>
+            <div class="col-md-3"></div>
+        </div>
+    </div>
+
 {% endblock %}
