--- a/pypi_org/templates/shared/_layout.html
+++ b/pypi_org/templates/shared/_layout.html
@@ -10,13 +10,9 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="/static/css/site.css" />
 </head>
 <body>
-
-    <nav>
-        <a href="/">Home</a>
-        <a href="/about">About</a>
-    </nav>
 
     <div class="main_content">
         {% block main_content %}
