add some styling for _layout.html and index.html, moved site.css from static/css to static to get site to show styling

--- a/pypi_org/templates/home/index.html
+++ b/pypi_org/templates/home/index.html
@@ -1,10 +1,11 @@
 {% extends 'shared/_layout.html' %}
 {% block main_content %}
+
     <div class="hero">
-        <h1>Find, install and publish Python packages with the Python Package Index</h1>
-
-        <input type="text" placeholder=" Search projects" class="form-control">
-
+        <div class="hero-inner">
+            <h1>Find, install and publish Python packages with the Python Package Index</h1>
+            <input type="text" placeholder=" Search projects" class="form-control">
+        </div>
         or <a href="">Browse projects</a>
     </div>
 
