--- a/pypi_org/static/site.css
+++ b/pypi_org/static/site.css
@@ -1,17 +1,16 @@
 body {
     color: #222;
-    background: #fff;
     margin: 0px;
     padding: 0px;
-}
-
-.title {
-    font-weight: bold;
+    /*font-family: Soutce Sans Pro, Helvetica, Arial, sans-serif;*/
+    font-size: 17px;
+    background-color: #006dad;
 }
 
 .main_content {
-    padding: 0px;
     margin: 0px;
+    background: #fff;
+    padding-bottom: 50px;
 }
 
 nav {
@@ -20,6 +19,10 @@ nav {
     font-size: 20px;
     color: white;
     height: 65px;
+}
+
+.navbar-nav {
+    align-content: end;
 }
 
 .hero {
@@ -45,4 +48,65 @@ nav {
     max-width: 500px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.pypi-stats {
+    background-color: #ececec;
+    padding: 10px 0;
+    text-align: center;
+    border-bottom: 1px solid #d3d3d3;
+    border-top: 1px solid #d3d3d3;
+    margin-bottom: 30px;
+}
+
+.pypi-stats .stat {
+    display: inline-block;
+    min-width: 170px;
+    padding: 10px;
+    font-size: 16px;
+    color: #003d61;
+}
+
+.project-list .subtitle {
+    font-style: italic;
+    margin-bottom: 10px;
+}
+
+.project-list {
+    font-size: 24px;
+}
+
+.project-list .project {
+    border: 1px solid #d3d3d3;
+    padding: 10px;
+    background-color: #ececec;
+    min-height: 45px;
+    color: black;
+    margin-bottom: 15px;
+}
+
+.project-list .project .title {
+    font-size: 20px;
+}
+
+.project-list .project a {
+    color: #006dad;
+    font-weight: bold;
+}
+
+.project-list .project .desc {
+    font-size: 16px;
+    font-weight: normal;
+    font-style: italic;
+}
+
+footer {
+    padding: 30px;
+    text-align: center;
+    color: white;
+    margin-top: 50px;
+}
+
+footer a {
+    color: #2495f2;
 }
