style registration form

--- a/pypi_org/templates/account/register.html
+++ b/pypi_org/templates/account/register.html
@@ -1,14 +1,20 @@
 {% extends 'shared/_layout.html' %}
 {% block main_content %}
-    <form action="" method="POST">
+
+<div class="form-container">
+    <form action="" method="POST" class="account-form">
         <h1>Register at PyPI</h1>
 
-        <input type="text" placeholder=" Your name">
-        <input type="text" placeholder=" Your email address">
-        <input type="password" placeholder=" Password">
-        <button type="submit">Register</button>
+        <input type="text" placeholder=" Your name" class="form-control">
+        <input type="text" placeholder=" Your email address" class="form-control">
+        <input type="password" placeholder=" Password" class="form-control">
+        <button type="submit" class="btn btn-danger">Register</button>
+        <div style="clear: both;"></div>
     </form>
+</div>
+
 {% endblock %}
 
 {% block additional_css %}
+    <link rel="stylesheet" href="/static/account.css">
 {% endblock %}
