--- a/pypi_org/templates/shared/_layout.html
+++ b/pypi_org/templates/shared/_layout.html
@@ -17,29 +17,25 @@
 </head>
 <body>
 
-
 <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse navbar-expand-md">
-    <a class="navbar-brand" href="#">IMGIMAGE</a>
+    <a class="navbar-brand" href="/"><img src="/static/img/pypi-logo.svg"/></a>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+    <button class="navbar-toggler navbar-toggle" type="button" data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="navbar-toggler-icon">
+            <div class="nav-expand-line"></div>
+            <div class="nav-expand-line"></div>
+            <div class="nav-expand-line"></div>
+        </div>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Donate</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Help</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/account/login">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/account/register" id="last_nav_link">Register</a>
-            </li>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item"><a class="nav-link" href="#">Donate</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Help</a></li>
+            <li class="nav-item"><a class="nav-link" href="/account/login">Login</a></li>
+            <li class="nav-item"><a class="nav-link" href="/account/register" id="last_nav_link">Register</a></li>
         </ul>
     </div>
 </nav>
