--- a/pypi_org/templates/shared/_layout.html
+++ b/pypi_org/templates/shared/_layout.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/site.css"/>
+    <link rel="stylesheet" href="/static/nav.css"/>
     {% block additional_css %}
     {% endblock %}
 
@@ -18,7 +19,7 @@
 <body>
 
 <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse navbar-expand-md">
-    <a class="navbar-brand" href="/"><img src="/static/img/pypi-logo.svg"/></a>
+    <a class="navbar-brand" href="/"><img src="/static/pypi-logo.svg"/></a>
 
     <button class="navbar-toggler navbar-toggle" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent"
