--- a/pypi_org/templates/account/index.html
+++ b/pypi_org/templates/account/index.html
@@ -1,9 +1,9 @@
 {% extends 'shared/_layout.html' %}
 {% block main_content %}
-    <h1>Index at PyPI</h1>
+    <h1>My Account</h1>
 
     <div>
-        TBD ACCOUNT PAGE
+        Welcome to your account, {{ user.name }}!
     </div>
 {% endblock %}
 
